# coding-agents

./: .env.example  Dockerfile  README.md  cli.py  coding_runner.py  config.py  docker-compose.yml  main.py  pyproject.toml  reviewer_runner.py  runner.py
.github/workflows/: .ai-coding-cycle.yml  ai-coding-cycle.yml  ai-coding-cycle.yml.example  ai-review-reusable.yml.example  ai-review.yml.example
agents/coding_agent/: agent.py  llm.py
agents/reviewer_agent/: __init__.py  agent.py  llm.py
tools/: filesystem.py  github.py  reviewer.py  search.py
